# Fix32

./: Cargo.toml  README.md
src/: .lib.rs.kate-swp  fix32.rs  lib.rs
src/fix32/: internal_constants.rs
